# wodify-hermes

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
tests/: __init__.py  test_cli.py
wodify/: __init__.py  cli.py  client.py  config.py  models.py
